modules/gdscript/tests/scripts/runtime/errors/op_by_zero/division_by_zero_vector3i.gd
func test():
	var vec3i = Vector3i(1, 1, 1)
	vec3i /= Vector3i(0, 0, 0)
